welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:4: error: Boolean(true) does not take parameters
{if (isMorning==false && isMom==false && isAsleep==false) 
^